@@ -7,6 +7,7 @@ $Id$
 
 0.04
 	- Test scripts and documentation updates [Tom Heady]
+	- Added Test::More dependency for better tests
 
 0.03   Fri Feb 21 07:41:05 2003
 	- Added missing ExtUtil::Constant fallback files
